create and delete features added

--- a/Views/HelloWorld/Movie.cshtml
+++ b/Views/HelloWorld/Movie.cshtml
@@ -32,7 +32,7 @@
                 <td>
                     <a href="" class="btn btn-primary">Details</a>
                     <a href="" class="btn btn-success">Edit</a>
-                    <a href="" class="btn btn-danger">Delete</a>
+                    <a href="/HelloWorld/DeleteMovie/@movie.Id" class="btn btn-danger">Delete</a>
                 </td>
 
             </tr>
@@ -41,5 +41,5 @@
     </tbody>
   
 </table>
-  <a href="" class="btn btn-primary">Add Movie</a>
+  <a asp-area="" asp-controller="HelloWorld" asp-action="AddMovie" class="btn btn-primary">Add Movie</a>
 </div>
