--- a/Views/HelloWorld/AddMovie.cshtml
+++ b/Views/HelloWorld/AddMovie.cshtml
@@ -1,30 +1,32 @@
+@model MvcMovie.Models.Movie;
+
 @{
     ViewData["Title"] = "Movies";
 }
 
 <h2>Movies</h2>
-<table class="table table-striped">
-    <thead class="table-dark">
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Title</th>
-            <th scope="col">Genre</th>
-            <th scope="col">ReleaseDate</th>
-            <th scope="col">Price</th>
+<form class="form-group" method="post">
+    <table class="table table-striped">
+        <thead class="table-dark">
+            <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Genre</th>
+                <th scope="col">ReleaseDate</th>
+                <th scope="col">Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th> @Html.TextBoxFor(x=>x.Title, new {@class = "form-control"} )</th>
 
-        </tr>
-    </thead>
-    <tbody>
+                <td> @Html.TextBoxFor(x=>x.ReleaseDate, new {@class = "form-control"} )</td>
 
+                
+                <td> @Html.TextBoxFor(x=>x.Genre, new {@class = "form-control"} )</td>
 
-        <tr>
-            <th><input type="text" disabled></th>
-            <td><input type="text"></td>
-            <td><input type="text"></td>
-            <td><input type="text"></td>
-            <td><input type="text"></td>
-        </tr>
-
-
-    </tbody>
-</table>
+                <td> @Html.TextBoxFor(x=>x.Price, new {@class = "form-control"} )</td>
+            </tr>
+        </tbody>
+    </table>
+    <button type="submit" class="btn btn-success">Confirm</button>
+</form>
