getmovie added for edit

--- a/Views/HelloWorld/Movie.cshtml
+++ b/Views/HelloWorld/Movie.cshtml
@@ -31,7 +31,7 @@
                 <td>@movie.Price</td>
                 <td>
                     <a href="" class="btn btn-primary">Details</a>
-                    <a href="" class="btn btn-success">Edit</a>
+                    <a href="/HelloWorld/GetMovie/@movie.Id" class="btn btn-success">Edit</a>
                     <a href="/HelloWorld/DeleteMovie/@movie.Id" class="btn btn-danger">Delete</a>
                 </td>
 
