--- a/Views/HelloWorld/AddMovie.cshtml
+++ b/Views/HelloWorld/AddMovie.cshtml
@@ -1,7 +1,7 @@
 @model MvcMovie.Models.Movie;
 
 @{
-    ViewData["Title"] = "Movies";
+    ViewData["Title"] = "Add Movie";
 }
 
 <h2>Movies</h2>
@@ -13,6 +13,7 @@
                 <th scope="col">Genre</th>
                 <th scope="col">ReleaseDate</th>
                 <th scope="col">Price</th>
+                <th scope="col">Description</th>
             </tr>
         </thead>
         <tbody>
@@ -25,6 +26,8 @@
                 <td> @Html.TextBoxFor(x=>x.Genre, new {@class = "form-control"} )</td>
 
                 <td> @Html.TextBoxFor(x=>x.Price, new {@class = "form-control"} )</td>
+                
+                <td> @Html.TextBoxFor(x=>x.Description, new {@class = "form-control"} )</td>
             </tr>
         </tbody>
     </table>
